# KeyKeeper

./: CMakeLists.txt  README.md
src/: main.cpp
src/encryption/: Encryption.cpp  Encryption.h
src/storage/: FileStorage.cpp  FileStorage.h
src/ui/: LoginWindow.cpp  LoginWindow.h
